objects/ConversationDefinitionSession_Home__dll.object
<CustomObject>
    <fields>
        <fullName>ChannelType__c</fullName>
        <label>Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConversationDefinitionId__c</fullName>
        <label>Conversation Definition ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <label>Created By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalSessionKey__c</fullName>
        <label>External Session Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasErrorLogs__c</fullName>
        <label>Has Error Logs</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <label>Hour</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Conversation Definition Session ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationName__c</fullName>
        <label>Integration Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationType__c</fullName>
        <label>Integration Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <label>Deleted</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Master Language</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <label>Last Modified By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>Owner ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuntimeSessionKey__c</fullName>
        <label>Runtime Session Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionDuration__c</fullName>
        <label>Duration in Seconds</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SessionEndType__c</fullName>
        <label>Session End Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionStartTime__c</fullName>
        <label>Session Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SessionStatus__c</fullName>
        <label>Session Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionTransferResult__c</fullName>
        <label>Session Transfer Result</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionTransferTargetType__c</fullName>
        <label>Session Transfer Target Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionTransferType__c</fullName>
        <label>Session Transfer Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>SfdcOrganizationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>